[package]
name = "substreams-helpers-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
nom = "7.1.3"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0.75"
substreams-ethereum = { path = "../../substreams-ethereum/substreams-ethereum" }
substreams-entity-change = "1.3"
substreams-helpers-traits = { path = "../substreams-helpers-traits" }
